@@ -915,11 +915,14 @@ partialclean::
 # Check that the native-code compiler is supported
 .PHONY: checknative
 checknative:
+ifneq "$(NATIVE_COMPILER)" "true"
+	$(error The source tree was configured with --disable-native-compiler!)
+else
 ifeq "$(ARCH)" "none"
-checknative:
 	$(error The native-code compiler is not supported on this platform)
 else
 	@
+endif
 endif
 
 # Check that the stack limit is reasonable (Unix-only)
